--- a/index.html
+++ b/index.html
@@ -6,6 +6,29 @@
 </head>
 
 <body>
+    <script type="module">
+        // Import the functions you need from the SDKs you need
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-app.js";
+        import { getAnalytics } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-analytics.js";
+        // TODO: Add SDKs for Firebase products that you want to use
+        // https://firebase.google.com/docs/web/setup#available-libraries
+      
+        // Your web app's Firebase configuration
+        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+        const firebaseConfig = {
+          apiKey: "AIzaSyCvilvwrb0NDzWEhHksHS9MYkIm-cRXfhk",
+          authDomain: "world-diary-feedback-63e11.firebaseapp.com",
+          projectId: "world-diary-feedback-63e11",
+          storageBucket: "world-diary-feedback-63e11.firebasestorage.app",
+          messagingSenderId: "123734446175",
+          appId: "1:123734446175:web:fe5a2a8a6de8a667b24bea",
+          measurementId: "G-K8XTWBFG4X"
+        };
+      
+        // Initialize Firebase
+        const app = initializeApp(firebaseConfig);
+        const analytics = getAnalytics(app);
+      </script>
     <h1>World Diary</h1>
     <h2>By Hashvanth Bandla</h2>
     <h3>This website is all about interesting facts of the world.</h3>
